continuing implementation - broken

--- a/media-library/apps/ml-app/src/app/app-music/app-album/app-album.component.html
+++ b/media-library/apps/ml-app/src/app/app-music/app-album/app-album.component.html
@@ -1,9 +1,11 @@
 <ml-card>
-  <ml-card-header>
-    <ml-card-title>{{album?.title}}</ml-card-title>
-    <ml-card-subtitle></ml-card-subtitle>
-  </ml-card-header>
   <ml-card-body>
+    <div class="flex gap-[30px]">
+      <div class="flex">
+          <fa-icon [icon]="faCompactDisc" [classes]="['fa-2xl']"></fa-icon>
+      </div>
+      <div class="flex flex-col">
+      </div>
+    </div>
   </ml-card-body>
-  <ml-card-footer></ml-card-footer>
 </ml-card>
