--- a/media-library/apps/ml-app/src/app/app-music/app-song/app-song.component.html
+++ b/media-library/apps/ml-app/src/app/app-music/app-song/app-song.component.html
@@ -2,7 +2,7 @@
   <ml-card-body>
     <div class="flex gap-[30px]">
       <div class="flex">
-          <fa-icon [icon]="faUser" [classes]="['fa-2xl']"></fa-icon>
+          <fa-icon [icon]="faHeadphones" [classes]="['fa-2xl']"></fa-icon>
       </div>
       <div class="flex flex-col">
       </div>
