--- a/media-library/apps/ml-app/src/app/app.component.html
+++ b/media-library/apps/ml-app/src/app/app.component.html
@@ -3,5 +3,5 @@
     <app-navbar></app-navbar>
   </header>
   <main class="grow"><router-outlet></router-outlet></main>
-  <footer class="flex items-center justify-center h-footer bg-light text-dark dark:bg-dark dark:text-light">&copy; {{year}} - Kendall O. Williams</footer>
+  <footer class="flex items-center justify-center h-footer bg-light text-dark dark:bg-dark dark:text-light">&copy; {{year}} Kendall O. Williams</footer>
 </div>
