--- a/media-library/libs/ml-ui/src/lib/controls/select/select-option/select-option.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/select/select-option/select-option.component.html
@@ -1,5 +1,5 @@
 <div class="bg-light dark:bg-dark text-dark dark:text-light 
 hover:bg-dark hover:text-light hover:dark:bg-light hover:dark:text-dark
-  px-[5px]">
+  px-[5px] cursor-pointer">
   <ng-content></ng-content>
 </div>
