--- a/media-library/libs/ml-ui/src/lib/controls/search/search.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/search/search.component.html
@@ -4,5 +4,5 @@
     placeholder="Enter text..." type="text" #txtSearch (focusout)="handleFocusOut($event)" (keypress)="handleKeyPress($event)" />
 </div>
 <button class="bg-inherit text-inherit border-0 p-0 m-0 data-[hover=true]:text-info" (click)="handleSearch($event)" #btnSearch>
-  <fa-icon *ngIf="faIcon" [icon]="faIcon"></fa-icon>
+  <fa-icon [icon]="faSearch"></fa-icon>
 </button>
