--- a/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
@@ -1,21 +1,8 @@
-<div class="relative" #host>
-  <div class="h-[25px]">
-    <button type="button" class="flex items-center border-dark border-[1px] border-solid
-      rounded bg-light dark:bg-dark text-dark dark:text-light w-full px-[5px] gap-[5px]"
-      (click)="toggleDropdown()">
-      <div class="grow text-left">
-        <ng-container *ngIf="selectLabel; else placeholderTemplate">{{selectLabel}}</ng-container>
-        <ng-template #placeholderTemplate>
-          {{placeholder}}
-        </ng-template>
-      </div>
-      <fa-icon [icon]="faTimesCircle" *ngIf="selectLabel" (click)="clearSelection($event)"></fa-icon>
-      <fa-icon [icon]="faCaretDown" [ngClass]="{ 'hidden': isDropdownOpen }"></fa-icon>
-      <fa-icon [icon]="faCaretUp" *ngIf="isDropdownOpen"></fa-icon>
-    </button>
-  </div>
-  <ng-template mlDropdown [(isDropdownOpen)]="isDropdownOpen" [hostElement]="host">
-    <div class="mt-[5px] fixed w-[var(--dropdown-width)] top-[var(--dropdown-top)] left-[var(--dropdown-left)]">
+<ng-container *ngIf="!isDropdownOpen" [ngTemplateOutlet]="select"></ng-container>
+<ng-template mlDropdown [(isDropdownOpen)]="isDropdownOpen" [hostElement]="host.nativeElement">
+  <div class="fixed w-[var(--dropdown-width)] top-[var(--dropdown-top)] left-[var(--dropdown-left)]">
+    <ng-container [ngTemplateOutlet]="select"></ng-container>
+    <div class="mt-[5px]">
       <div class="border-dark dark:border-light border-[1px] border-solid rounded bg-light 
       dark:bg-dark text-dark dark:text-light p-[1px]">
         <ng-container *ngFor="let option of options">
@@ -23,5 +10,26 @@
         </ng-container>
       </div>
     </div>
-  </ng-template>
-</div>
+  </div>
+</ng-template>
+<ng-template #select>
+  <div class="h-[25px]" [ngClass]="{
+    'w-full': !isDropdownOpen,
+    'w-[var(--dropdown-width)]': isDropdownOpen
+  }">
+    <div class="flex items-center border-dark border-[1px] border-solid cursor-pointer
+      rounded bg-light dark:bg-dark text-dark dark:text-light w-full px-[5px] gap-[5px]" (click)="toggleDropdown()">
+      <div class="grow text-left">
+        <ng-container *ngIf="selectLabel; else placeholderTemplate">{{selectLabel}}</ng-container>
+        <ng-template #placeholderTemplate>
+          {{placeholder}}
+        </ng-template>
+      </div>
+      <button type="button" (click)="clearSelection($event)"><fa-icon [icon]="faTimesCircle" *ngIf="selectLabel"></fa-icon></button>
+      <button type="button">
+        <fa-icon [icon]="faCaretDown" [ngClass]="{ 'hidden': isDropdownOpen }"></fa-icon>
+        <fa-icon [icon]="faCaretUp" *ngIf="isDropdownOpen"></fa-icon>
+      </button>
+    </div>
+  </div>
+</ng-template>
