--- a/media-library/libs/ml-ui/src/lib/controls/select/select-option/select-option.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/select/select-option/select-option.component.html
@@ -1,7 +1,8 @@
 <ng-container *ngIf="!!option.text; else template">
-  <div class="bg-light dark:bg-dark text-dark dark:text-light 
+  <div class="grid grid-cols-[25px_1fr] bg-light dark:bg-dark text-dark dark:text-light 
   hover:bg-dark hover:text-light hover:dark:bg-light hover:dark:text-dark
-    px-[5px] cursor-pointer">
+    px-[5px] cursor-pointer" [ngClass]="{ 'font-bold': option.selected }">
+    <span><fa-icon [icon]="faCheck" *ngIf="option.selected"></fa-icon></span>
     {{option.text}}
   </div>
 </ng-container>
