--- a/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
@@ -1,4 +1,6 @@
-<ng-container *ngIf="!isDropdownOpen" [ngTemplateOutlet]="select"></ng-container>
+<ng-container *ngIf="!isDropdownOpen">
+  <ng-template [ngTemplateOutlet]="select"></ng-template>
+</ng-container>
 <ng-template #select>
   <div class="flex items-center border-dark border-[1px] border-solid cursor-pointer
     rounded bg-light dark:bg-dark text-dark dark:text-light w-full px-[5px] gap-[5px] h-[var(--select-height)]
@@ -9,23 +11,24 @@
         {{placeholder}}
       </ng-template>
     </div>
-    <button type="button" (click)="clearSelection($event)"><fa-icon [icon]="faTimesCircle" *ngIf="selectLabel"></fa-icon></button>
-    <button type="button">
-      <fa-icon [icon]="faCaretDown" *ngIf="!isDropdownOpen"></fa-icon>
-      <fa-icon [icon]="faCaretUp" *ngIf="isDropdownOpen"></fa-icon>
-    </button>
+    <fa-icon [icon]="faTimesCircle" *ngIf="selectLabel" (click)="clearSelection($event)" class=""></fa-icon>
+    <fa-icon [icon]="faCaretDown" *ngIf="!isDropdownOpen"></fa-icon>
+    <fa-icon [icon]="faCaretUp" *ngIf="isDropdownOpen"></fa-icon>
   </div>
 </ng-template>
 <ng-template mlDismissableModal [(isOpen)]="isDropdownOpen" (isOpenChange)="handleDropdownClose($event)">
   <div class="fixed w-[var(--select-width)] top-[var(--select-top)] left-[var(--select-left)]">
     <ng-container [ngTemplateOutlet]="select"></ng-container>
     <div class="mt-[5px] select-none">
-      <div class="border-dark dark:border-light border-[1px] border-solid rounded bg-light 
-      dark:bg-dark text-dark dark:text-light p-[1px]">
-        <ng-container *ngFor="let option of options">
-          <ml-select-option [option]="option" *ngIf="!option.hidden"></ml-select-option>
-        </ng-container>
-      </div>
+      <ng-container [ngTemplateOutlet]="group"></ng-container>
     </div>
   </div>
+</ng-template>
+<ng-template #group>
+  <ul role="group" class="border-dark dark:border-light border-[1px] border-solid rounded bg-light 
+  dark:bg-dark text-dark dark:text-light p-[1px]">
+    <ng-container *ngFor="let option of options">
+      <li mlSelectOption [option]="option" *ngIf="!option.hidden"></li>
+    </ng-container>
+  </ul>
 </ng-template>
