--- a/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/select/select.component.html
@@ -16,7 +16,7 @@
     <fa-icon [icon]="faCaretUp" *ngIf="isDropdownOpen"></fa-icon>
   </div>
 </ng-template>
-<ng-template mlDismissableModal [(isOpen)]="isDropdownOpen" (isOpenChange)="handleDropdownClose($event)">
+<ng-template mlDismissableModal [(isOpen)]="isDropdownOpen" (isOpenChange)="handleDropdownClose($event)" [useAppRootVcr]="false">
   <div class="fixed w-[var(--select-width)] top-[var(--select-top)] left-[var(--select-left)]">
     <ng-container [ngTemplateOutlet]="select"></ng-container>
     <div class="mt-[5px] select-none">
