--- a/media-library/libs/ml-ui/src/lib/content/configuration/music-configuration/music-configuration.component.html
+++ b/media-library/libs/ml-ui/src/lib/content/configuration/music-configuration/music-configuration.component.html
@@ -7,16 +7,20 @@
   </ml-card-header>
   <ml-card-body class="flex flex-col gap-[30px]">
     <div class="grid grid-cols-[100px_1fr] items-center">
-      <label>Album Sort</label>
+      <label mlLabel>Album Sort</label>
       <span>{{albumSort}}</span>
     </div>
     <div class="grid grid-cols-[100px_1fr] items-center">
-      <label>Artist Sort</label>
+      <label mlLabel>Artist Sort</label>
       <span>{{artistSort}}</span>
     </div>
     <div class="grid grid-cols-[100px_1fr] items-center">
-      <label>Song Sort</label>
+      <label mlLabel>Song Sort</label>
       <span>{{songSort}}</span>
+    </div>
+    <div class="grid grid-cols-[100px_1fr] items-center">
+      <label mlLabel>Paths</label>
+      <span>{{configuration.musicPaths.join('\n')}}</span>
     </div>
   </ml-card-body>
 </ml-card>
