--- a/media-library/libs/ml-ui/src/lib/content/configuration/music-configuration-editor/music-configuration-editor.component.html
+++ b/media-library/libs/ml-ui/src/lib/content/configuration/music-configuration-editor/music-configuration-editor.component.html
@@ -4,15 +4,15 @@
   </ml-card-header>
   <ml-card-body class="flex flex-col gap-[30px]">
     <div class="flex items-center gap-[10px]">
-      <label class="shrink-0">Album Sort</label>
+      <label mlLabel class="shrink-0">Album Sort</label>
       <ml-select [options]="albumSortOptions" [(ngModel)]="albumSort"></ml-select>
     </div>
     <div class="flex items-center gap-[10px]">
-      <label class="shrink-0">Artist Sort</label>
+      <label mlLabel class="shrink-0">Artist Sort</label>
       <ml-select [options]="artistSortOptions" [(ngModel)]="artistSort"></ml-select>
     </div>
     <div class="flex items-center gap-[10px]">
-      <label class="shrink-0">Song Sort</label>
+      <label mlLabel class="shrink-0">Song Sort</label>
       <ml-select [options]="songSortOptions" [(ngModel)]="songSort"></ml-select>
     </div>
   </ml-card-body>
