--- a/media-library/libs/ml-ui/src/lib/controls/list-box/list-box.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/list-box/list-box.component.html
@@ -1,9 +1,9 @@
 <div class="flex items-center h-control" *ngFor="let item of items" role="option">
-  <div class="border-dark border-[1px] border-solid rounded-[5px] self-stretch px-[10px]
+  <span class="inline-flex border-dark border-[1px] border-solid rounded-[5px] self-stretch px-[10px]
     text-dark dark:text-light bg-light dark:bg-dark" [ngClass]="{
-      'border-r-0 rounded-r-none': !readonly,
+      'border-r-0 rounded-r-none items-center': !readonly,
       'text-secondary border-secondary': disabled
-    }">{{item}}</div>
+    }">{{item}}</span>
   <button mlButton *ngIf="!readonly" class="rounded-l-none" [variant]="'danger'" (click)="handleDelete(item)" [disabled]="disabled">
     <fa-icon [icon]="faTrashCan"></fa-icon>
     <span class="sr-only">delete list item</span>
