--- a/media-library/libs/ml-ui/src/lib/controls/list-box/list-box.component.html
+++ b/media-library/libs/ml-ui/src/lib/controls/list-box/list-box.component.html
@@ -1,7 +1,7 @@
 <div class="flex items-center h-control" *ngFor="let item of items" role="option">
   <span class="inline-flex border-dark border-[1px] border-solid rounded-[5px] self-stretch px-[10px]
-    text-dark dark:text-light bg-light dark:bg-dark" [ngClass]="{
-      'border-r-0 rounded-r-none items-center': !readonly,
+    text-dark dark:text-light bg-light dark:bg-dark items-center" [ngClass]="{
+      'border-r-0 rounded-r-none': !readonly,
       'text-secondary border-secondary': disabled
     }">{{item}}</span>
   <button mlButton *ngIf="!readonly" class="rounded-l-none" [variant]="'danger'" (click)="handleDelete(item)" [disabled]="disabled">
