button style fix

--- a/media-library/libs/ml-ui/src/lib/content/configuration/music-configuration-editor/music-configuration-editor.component.html
+++ b/media-library/libs/ml-ui/src/lib/content/configuration/music-configuration-editor/music-configuration-editor.component.html
@@ -1,6 +1,6 @@
 
 <form [formGroup]="configForm">
-  <ml-card class="w-screen ">
+  <ml-card class="w-[500px]">
     <ml-card-header>
       <ml-card-title>Music Settings</ml-card-title>
     </ml-card-header>
