--- a/media-library/apps/ml-app/src/app/pages/app-settings/app-settings.component.html
+++ b/media-library/apps/ml-app/src/app/pages/app-settings/app-settings.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center h-full">
+<div class="flex items-center h-full p-[30px]">
   <ng-container *ngIf="configuration$ | async as configuration">
     <ml-music-configuration [configuration]="configuration"></ml-music-configuration>
   </ng-container>
