--- a/media-library/libs/ml-ui/src/lib/content/configuration/music-configuration/music-configuration.component.html
+++ b/media-library/libs/ml-ui/src/lib/content/configuration/music-configuration/music-configuration.component.html
@@ -1,4 +1,4 @@
-<ml-card class="w-[500px]">
+<ml-card class="w-[500px] h-full">
   <ml-card-header>
     <ml-card-title class="flex w-full">
       <div class="grow">Music Settings</div>
