--- a/media-library/libs/ml-ui/src/lib/content/configuration/podcast-configuration/podcast-configuration.component.html
+++ b/media-library/libs/ml-ui/src/lib/content/configuration/podcast-configuration/podcast-configuration.component.html
@@ -6,14 +6,19 @@
     </ml-card-title>
   </ml-card-header>
   <ml-card-body class="flex flex-col gap-[10px]">
-    <div class="grid grid-cols-[100px_1fr] items-center">
-      <label mlLabel></label>
-      <span></span>
+    <div class="grid grid-cols-[125px_1fr] items-center">
+      <label mlLabel>Podcast Sort</label>
+      <span>{{podcastSort}}</span>
+    </div>
+    <div class="grid grid-cols-[125px_1fr] items-center">
+      <label mlLabel>Episode Filter</label>
+      <span>{{episodeFilter}}</span>
     </div>
   </ml-card-body>
   <ml-card-footer>
     <div class="flex gap-[10px] items-center h-full w-full justify-end">
-      <button mlButton></button>
+      <button mlButton (click)="handleRefresh()">Refresh All</button>
+      <button mlButton (click)="handleAdd()">Add Podcast</button>
     </div>
   </ml-card-footer>
 </ml-card>
