--- a/media-library/libs/ml-ui/src/lib/content/configuration/media-library-configuration/media-library-configuration.component.html
+++ b/media-library/libs/ml-ui/src/lib/content/configuration/media-library-configuration/media-library-configuration.component.html
@@ -1,4 +1,4 @@
-<ml-card class="w-[500px]">
+<ml-card class="w-[500px] h-full">
   <ml-card-header>
     <ml-card-title class="flex w-full">
       <div class="grow">Media Library Settings</div>
@@ -6,7 +6,7 @@
     </ml-card-title>
   </ml-card-header>
   <ml-card-body class="flex flex-col gap-[10px]">
-    <div class="grid grid-cols-[100px_1fr] items-center">
+    <div class="grid grid-cols-[250px_1fr] items-center">
       <label mlLabel></label>
       <span></span>
     </div>
