--- a/media-library/libs/ml-ui/src/lib/content/configuration/playlist-configuration-editor/playlist-configuration-editor.component.html
+++ b/media-library/libs/ml-ui/src/lib/content/configuration/playlist-configuration-editor/playlist-configuration-editor.component.html
@@ -1,11 +1,11 @@
 
 <form [formGroup]="configForm">
-  <ml-modal-content class="w-[500px]">
+  <ml-modal-content class=" ">
     <ml-modal-header>
       <ml-modal-title>Edit Playlist Settings</ml-modal-title>
     </ml-modal-header>
     <ml-modal-body class="flex flex-col gap-[10px]">
-      <div class="grid grid-cols-[100px_1fr]">
+      <div class="grid grid-cols-[250px_1fr]">
         <label mlLabel class="shrink-0"></label>
       </div>
     </ml-modal-body>
