--- a/media-library/libs/ml-ui/src/lib/content/configuration/music-configuration-editor/music-configuration-editor.component.html
+++ b/media-library/libs/ml-ui/src/lib/content/configuration/music-configuration-editor/music-configuration-editor.component.html
@@ -6,25 +6,25 @@
     </ml-modal-header>
     <ml-modal-body class="flex flex-col gap-[10px]">
       <div class="grid grid-cols-[150px_1fr]">
-        <label mlLabel class="shrink-0">Album Sort</label>
+        <label mlLabel class="required">Album Sort</label>
         <ml-select [options]="albumSortOptions" formControlName="selectedAlbumSort"></ml-select>
       </div>
       <div class="grid grid-cols-[150px_1fr]">
-        <label mlLabel class="shrink-0">Artist Sort</label>
+        <label mlLabel class="required">Artist Sort</label>
         <ml-select [options]="artistSortOptions" formControlName="selectedArtistSort"></ml-select>
       </div>
       <div class="grid grid-cols-[150px_1fr]">
-        <label mlLabel class="shrink-0">Song Sort</label>
+        <label mlLabel class="required">Song Sort</label>
         <ml-select [options]="songSortOptions" formControlName="selectedSongSort"></ml-select>
       </div>
       <div class="grid grid-cols-[150px_1fr]">
-        <label mlLabel class="shrink-0">Paths</label>
+        <label mlLabel>Paths</label>
         <ml-list-box formControlName="musicPaths"></ml-list-box>
       </div>
     </ml-modal-body>
     <ml-modal-footer class="flex items-center justify-end gap-[10px]">
       <button mlButton [variant]="'secondary'" (click)="handleCancel()">Cancel</button>
-      <button mlButton [variant]="'primary'" (click)="handleSave()" [attr.disabled]="!configForm.dirty || null">Save</button>
+      <button mlButton [variant]="'primary'" (click)="handleSave()" [attr.disabled]="!configForm.dirty || !configForm.valid || null">Save</button>
     </ml-modal-footer>
   </ml-modal-content>
 </form>
