--- a/media-library/libs/ml-ui/src/lib/content/configuration/playlist-configuration-editor/playlist-configuration-editor.component.html
+++ b/media-library/libs/ml-ui/src/lib/content/configuration/playlist-configuration-editor/playlist-configuration-editor.component.html
@@ -6,7 +6,7 @@
     </ml-modal-header>
     <ml-modal-body class="flex flex-col gap-[10px]">
       <div class="grid grid-cols-[150px_1fr]">
-        <label mlLabel class="shrink-0"></label>
+        <label mlLabel class=""></label>
       </div>
     </ml-modal-body>
     <ml-modal-footer class="flex items-center justify-end gap-[10px]">
